--- a/index.html
+++ b/index.html
@@ -122,78 +122,81 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script>
-/* -----------------------------
-   Data + Chips
--------------------------------- */
-const commonPlayers = ["Brunchie", "Colin W-B", "Nabber", "Ben", "Bill", "Ron", "Eugene"];
-const goalies = ["Colin D", "Sam", "ClothGimp"];
+const commonPlayers = ["Brunchie","Colin W-B","Nabber","Ben","Bill","Ron","Eugene"];
+const goalies = ["Colin D","Sam","ClothGimp"];
 
 function createPlayerChips() { createChips(commonPlayers, "playerChips", togglePlayer); }
 function createGoalieChips() { createChips(goalies, "goalieChips", toggleGoalie); }
-function createChips(list, containerId, handler) {
-  const container = document.getElementById(containerId);
-  container.innerHTML = "";
-  list.forEach(name => {
-    const chip = document.createElement("div");
-    chip.className = "chip";
-    chip.textContent = name;
-    chip.onclick = () => handler(name, chip);
+
+function createChips(list, containerId, handler){
+  const container=document.getElementById(containerId);
+  container.innerHTML="";
+  list.forEach(name=>{
+    const chip=document.createElement("div");
+    chip.className="chip";
+    chip.textContent=name;
+    chip.onclick=()=>handler(name, chip);
     container.appendChild(chip);
   });
 }
 
-function togglePlayer(name, chip) { 
-  chip.classList.toggle("selected"); 
-  updateTextareaFromSelection(); 
-  updateClearButtonVisibility(); // ✅ fixed visibility
-}
-function toggleGoalie(name, chip) { 
-  chip.classList.toggle("selected"); 
-  updateClearButtonVisibility(); // ✅ fixed visibility
+// ✅ Updated togglePlayer to remove unselected player from list
+function togglePlayer(name, chip){
+  const textarea=document.getElementById("names");
+  let names=textarea.value.split(",").map(n=>n.trim()).filter(Boolean);
+
+  if(names.includes(name)){
+    names=names.filter(n=>n!==name);
+    chip.classList.remove("selected");
+  } else {
+    names.push(name);
+    chip.classList.add("selected");
+  }
+
+  textarea.value=names.join(", ");
+  updateClearButtonVisibility();
 }
 
-function getSelectedPlayersFromChips() { return Array.from(document.querySelectorAll("#playerChips .chip.selected")).map(c=>c.textContent.trim()); }
-function getPlayersFromTextarea() { return (document.getElementById("names").value || "").split(",").map(s=>s.trim()).filter(Boolean); }
-function buildFinalPlayerPool() {
-  const selectedChips = getSelectedPlayersFromChips();
-  const typed = getPlayersFromTextarea();
-  const seen = new Set(selectedChips.map(p=>p.toLowerCase()));
-  const merged = [...selectedChips];
-  typed.forEach(t=>{ if(!seen.has(t.toLowerCase())) { merged.push(t); seen.add(t.toLowerCase()); } });
-  return merged;
+function toggleGoalie(name, chip){
+  chip.classList.toggle("selected");
+  updateClearButtonVisibility();
 }
-function updateTextareaFromSelection() { document.getElementById("names").value = buildFinalPlayerPool().join(", "); }
-function getSelectedGoalies() { return Array.from(document.querySelectorAll("#goalieChips .chip.selected")).map(c=>c.textContent.trim()); }
 
-function selectTeamSize(size, chip) {
-  document.getElementById("teamSize").value = size;
+function buildFinalPlayerPool(){
+  const typed=document.getElementById("names").value.split(",").map(n=>n.trim()).filter(Boolean);
+  return typed;
+}
+
+function getSelectedGoalies(){
+  return Array.from(document.querySelectorAll("#goalieChips .chip.selected")).map(c=>c.textContent.trim());
+}
+
+function selectTeamSize(size, chip){
+  document.getElementById("teamSize").value=size;
   document.querySelectorAll(".team-size-container .chip").forEach(c=>c.classList.remove("selected"));
   chip.classList.add("selected");
 }
 
-function clearAllPlayers() {
-  document.getElementById("names").value = "";
-  document.querySelectorAll("#playerChips .chip, #goalieChips .chip").forEach(c => c.classList.remove("selected"));
+function clearAllPlayers(){
+  document.getElementById("names").value="";
+  document.querySelectorAll("#playerChips .chip, #goalieChips .chip").forEach(c=>c.classList.remove("selected"));
   updateClearButtonVisibility();
 }
 
-function updateClearButtonVisibility() {
-  const hasPlayers = buildFinalPlayerPool().length > 0 || getSelectedGoalies().length > 0;
+function updateClearButtonVisibility(){
+  const hasPlayers=buildFinalPlayerPool().length>0 || getSelectedGoalies().length>0;
   document.getElementById("clearChipsBtn").classList.toggle("visible", hasPlayers);
 }
 
-/* -----------------------------
-   Team generation & sheet layout
--------------------------------- */
 function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
 
 function generateTeams(){
-  let players = buildFinalPlayerPool();
-  const selectedGoalies = getSelectedGoalies();
-  const teamSize = parseInt(document.getElementById("teamSize").value,10);
-  if(!teamSize || teamSize<1){alert("Enter valid team size.");return;}
-  
-  if(selectedGoalies.length){ const gSet = new Set(selectedGoalies.map(g=>g.toLowerCase())); players = players.filter(p=>!gSet.has(p.toLowerCase())); }
+  let players=buildFinalPlayerPool();
+  const selectedGoalies=getSelectedGoalies();
+  const teamSize=parseInt(document.getElementById("teamSize").value,10);
+  if(!teamSize||teamSize<1){alert("Enter valid team size.");return;}
+
+  if(selectedGoalies.length){ const gSet=new Set(selectedGoalies.map(g=>g.toLowerCase())); players=players.filter(p=>!gSet.has(p.toLowerCase())); }
 
   shuffle(players);
   const numTeams=2;
@@ -210,20 +213,16 @@ function generateTeams(){
   }
   renderTeams(teams,teamSize,subsPerTeam);
 
-  toolbar.style.display = document.getElementById("output").innerText.trim() ? "flex" : "none";
-  if (!navigator.share) document.getElementById("shareTeamsBtn").style.display = "none";
+  toolbar.style.display=document.getElementById("output").innerText.trim()?"flex":"none";
+  if(!navigator.share) document.getElementById("shareTeamsBtn").style.display="none";
 }
 
 function renderTeams(teams, teamSize, subsPerTeam){
-  const teamNames=[
-    "The Five-Hole Fiddlers","Goal Diggers","Ball Blazers","Stick Flickers","The Mighty Dangles",
-    "Deez Sticks","Floor Fury","The Dirty Dekes","Stickflix and Chill","The Deflectors",
-    "Ballz Deep","Just the Tip-Ins","The Slap and Tickles"
-  ];
+  const teamNames=["The Five-Hole Fiddlers","Goal Diggers","Ball Blazers","Stick Flickers","The Mighty Dangles","Deez Sticks","Floor Fury","The Dirty Dekes","Stickflix and Chill","The Deflectors","Ballz Deep","Just the Tip-Ins","The Slap and Tickles"];
   shuffle(teamNames);
   const out=document.getElementById("output");
   out.innerHTML="";
-  
+
   teams.forEach((team,i)=>{
     const displayName=teamNames[i%teamNames.length];
     let goalie=null;
@@ -235,21 +234,20 @@ function renderTeams(teams, teamSize, subsPerTeam){
     if(goalieTop){ topSlot=goalie; midLeft=playersOnly[0]||""; midRight=playersOnly[1]||""; bottomSlot=playersOnly[2]||""; }
     else { topSlot=playersOnly[0]||""; midLeft=playersOnly[1]||""; midRight=playersOnly[2]||""; bottomSlot=goalie; }
 
-    const cardHtml=`
-      <div class="team">
-        <div class="team-title">${displayName}</div>
-        <div class="formation-container">
-          <div class="formation-layout">
-            ${centeredRow(topSlot)}
-            ${twoAcrossRow(midLeft,midRight)}
-            ${centeredRow(bottomSlot)}
-          </div>
-          <div class="subs-section">
-            <div style="font-weight:bold;text-align:center;margin-bottom:8px;">Subs</div>
-            ${substitutes.length===0?`<div style="text-align:center;">None</div>`:substitutes.map(s=>`<div class="sub-card">${formatPlayer(s)}</div>`).join("")}
-          </div>
+    const cardHtml=`<div class="team">
+      <div class="team-title">${displayName}</div>
+      <div class="formation-container">
+        <div class="formation-layout">
+          ${centeredRow(topSlot)}
+          ${twoAcrossRow(midLeft,midRight)}
+          ${centeredRow(bottomSlot)}
         </div>
-      </div>`;
+        <div class="subs-section">
+          <div style="font-weight:bold;text-align:center;margin-bottom:8px;">Subs</div>
+          ${substitutes.length===0?`<div style="text-align:center;">None</div>`:substitutes.map(s=>`<div class="sub-card">${formatPlayer(s)}</div>`).join("")}
+        </div>
+      </div>
+    </div>`;
     out.insertAdjacentHTML('beforeend',cardHtml);
   });
 }
@@ -258,9 +256,6 @@ function centeredRow(player){ return player?`<div class="row-center"><div class=
 function twoAcrossRow(left,right){ return `<div class="row-two"><div class="player-block"><div class="player-icon"></div><div class="player-name">${formatPlayer(left)}</div></div><div class="player-block"><div class="player-icon"></div><div class="player-name">${formatPlayer(right)}</div></div></div>`; }
 function formatPlayer(p){ if(!p)return""; return p.includes("(G)")?`🧤 ${p.replace("(G)","").trim()}`:p; }
 
-/* -----------------------------
-   Save / Share toolbar
--------------------------------- */
 const toolbar=document.getElementById("exportToolbar");
 function saveTeamsAsImage(){
   const output=document.getElementById("output");
@@ -274,14 +269,11 @@ function shareTeams(){
   else { alert("Sharing not supported on this device/browser. Try saving instead."); }
 }
 
-/* -----------------------------
-   Init
--------------------------------- */
 window.addEventListener("DOMContentLoaded",()=>{
   createPlayerChips();
   createGoalieChips();
   updateClearButtonVisibility();
-  document.getElementById("names").addEventListener("input", updateClearButtonVisibility); // ✅ textarea triggers visibility
+  document.getElementById("names").addEventListener("input", updateClearButtonVisibility);
 });
 </script>
 </body>
