--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       box-sizing: border-box;
     }
     textarea { resize: none; min-height: 100px; }
-
+    .button-wrapper { display: flex; justify-content: center; }
     .image-button {
       display: block;
       margin: 0 auto;
@@ -43,6 +43,10 @@
       filter: invert(29%) sepia(74%) saturate(488%) hue-rotate(189deg) brightness(100%) contrast(103%);
       transition: transform 0.15s ease;
     }
+    .image-button:hover { transform: scale(1.1); }
+    .image-button:active { transform: scale(0.95); }
+    #buttonText { text-align:center; font-size:0.95rem; color:#555; margin-top:10px; }
+    .team { background: #fff; padding: 12px; margin: 10px 0; border-radius: 8px; border:1px solid #ddd; }
 
     .chips-header { display:flex; justify-content:space-between; align-items:center; margin-bottom:6px; }
     #clearChipsBtn {
@@ -52,30 +56,35 @@
       opacity:0; pointer-events:none;
     }
     #clearChipsBtn.visible { opacity:1; pointer-events:auto; }
+    #clearChipsBtn:hover { background:#516fd3; }
+    #clearChipsBtn:active { transform:scale(0.95); }
 
     .chips-container { display:flex; flex-wrap:wrap; gap:8px; margin:8px 0 12px 0; }
     .chip { padding:8px 14px; background:#e0e0e0; border-radius:20px; cursor:pointer; font-size:0.95rem; transition:all 0.2s ease; user-select:none; }
-    .chip.selected { background:#3a52a3; color:white; }
+    .chip:hover { background:#d0d0d0; }
+    .chip.selected { background:#3a52a3; color:white; box-shadow:0 2px 6px rgba(0,0,0,0.15); }
 
-    /* ✅ updated for image icons */
-    .player-icon {
-      width:60px;
-      height:60px;
-      border-radius:50%;
-      object-fit:contain;
-    }
+    .team-size-container { display:flex; gap:8px; margin:6px 0 12px 0; }
 
+    /* --- Team Sheet Styling --- */
     .team-title { font-size:1.2rem; font-weight:bold; text-align:center; margin-bottom:10px; }
     .formation-container { display:flex; gap:20px; justify-content:space-between; align-items:flex-start; }
     .formation-layout { width:75%; display:flex; flex-direction:column; align-items:center; gap:20px; }
-    .subs-section { width:25%; min-width:120px; background:#fafafa; border-radius:10px; padding:10px; border:1px solid #ddd; }
+    .subs-section { width:25%; min-width:120px; background:#fafafa; border-radius:10px; padding:10px; border:1px solid #ddd; height:fit-content; }
+    .sub-card { padding:6px 10px; border:1px solid #ccc; border-radius:6px; background:#fff; margin-bottom:6px; }
     .row-center { display:flex; flex-direction:column; align-items:center; }
     .row-two { width:100%; display:flex; justify-content:space-between; }
     .player-block { display:flex; flex-direction:column; align-items:center; }
+    .player-icon { width:60px; height:60px; background:#3a52a3; border-radius:50%; }
     .player-name { margin-top:6px; font-weight:600; }
+
+    @media (max-width:640px) {
+      .formation-container { flex-direction:column; }
+      .formation-layout { width:100%; }
+      .subs-section { width:100%; }
+    }
   </style>
 </head>
-
 <body>
 <h1>Floorball Team Picker</h1>
 
@@ -83,7 +92,6 @@
   <label>The usual suspects:</label>
   <button id="clearChipsBtn" type="button" onclick="clearAllPlayers()">Clear All</button>
 </div>
-
 <div id="playerChips" class="chips-container"></div>
 
 <div class="chips-header"><label>Goalies:</label></div>
@@ -107,11 +115,18 @@
 <h2>Teams:</h2>
 <div id="output"></div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<div id="exportToolbar" style="display: none; justify-content: center; gap: 10px; margin-top: 12px; flex-wrap: wrap;">
+  <button id="saveImageBtn" onclick="saveTeamsAsImage()" class="toolbar-btn">Save as Image</button>
+  <button id="shareTeamsBtn" onclick="shareTeams()" class="toolbar-btn">Share Teams</button>
+</div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script>
 const commonPlayers = ["Brunchie","Colin W-B","Nabber","Ben","Bill","Ron","Eugene"];
 const goalies = ["Colin D","Sam","ClothGimp"];
+
+function createPlayerChips() { createChips(commonPlayers, "playerChips", togglePlayer); }
+function createGoalieChips() { createChips(goalies, "goalieChips", toggleGoalie); }
 
 function createChips(list, containerId, handler){
   const container=document.getElementById(containerId);
@@ -124,9 +139,8 @@ function createChips(list, containerId, handler){
     container.appendChild(chip);
   });
 }
-function createPlayerChips(){ createChips(commonPlayers, "playerChips", togglePlayer); }
-function createGoalieChips(){ createChips(goalies, "goalieChips", toggleGoalie); }
 
+// ✅ Updated togglePlayer to remove unselected player from list
 function togglePlayer(name, chip){
   const textarea=document.getElementById("names");
   let names=textarea.value.split(",").map(n=>n.trim()).filter(Boolean);
@@ -138,6 +152,7 @@ function togglePlayer(name, chip){
     names.push(name);
     chip.classList.add("selected");
   }
+
   textarea.value=names.join(", ");
   updateClearButtonVisibility();
 }
@@ -148,12 +163,12 @@ function toggleGoalie(name, chip){
 }
 
 function buildFinalPlayerPool(){
-  return document.getElementById("names").value.split(",").map(n=>n.trim()).filter(Boolean);
+  const typed=document.getElementById("names").value.split(",").map(n=>n.trim()).filter(Boolean);
+  return typed;
 }
 
 function getSelectedGoalies(){
-  return Array.from(document.querySelectorAll("#goalieChips .chip.selected"))
-    .map(c=>c.textContent.trim());
+  return Array.from(document.querySelectorAll("#goalieChips .chip.selected")).map(c=>c.textContent.trim());
 }
 
 function selectTeamSize(size, chip){
@@ -169,119 +184,96 @@ function clearAllPlayers(){
 }
 
 function updateClearButtonVisibility(){
-  const hasPlayers = buildFinalPlayerPool().length > 0 || getSelectedGoalies().length > 0;
+  const hasPlayers=buildFinalPlayerPool().length>0 || getSelectedGoalies().length>0;
   document.getElementById("clearChipsBtn").classList.toggle("visible", hasPlayers);
 }
 
-function shuffle(arr){
-  for(let i=arr.length-1;i>0;i--){
-    const j=Math.floor(Math.random()*(i+1));
-    [arr[i],arr[j]]=[arr[j],arr[i]];
-  }
-}
-
-/* ✅ NEW: picks correct icon */
-function getPlayerIcon(player){
-  return player.includes("(G)") ? "goalie.png" : "player.png";
-}
-
-/* ✅ UPDATED_RENDERING FUNCTIONS */
-function centeredRow(player){
-  return player
-    ? `<div class="row-center">
-         <img src="${getPlayerIcon(player)}" class="player-icon" alt="player">
-         <div class="player-name">${formatPlayer(player)}</div>
-       </div>`
-    : `<div class="row-center"><div style="height:46px"></div></div>`;
-}
-
-function twoAcrossRow(left,right){
-  return `
-    <div class="row-two">
-      <div class="player-block">
-        ${left ? `<img src="${getPlayerIcon(left)}" class="player-icon" alt="player">` : `<div style="width:60px;height:60px;"></div>`}
-        <div class="player-name">${formatPlayer(left)}</div>
-      </div>
-      <div class="player-block">
-        ${right ? `<img src="${getPlayerIcon(right)}" class="player-icon" alt="player">` : `<div style="width:60px;height:60px;"></div>`}
-        <div class="player-name">${formatPlayer(right)}</div>
-      </div>
-    </div>`;
-}
-
-function formatPlayer(p){
-  if(!p) return "";
-  return p.includes("(G)") ? `🧤 ${p.replace("(G)","").trim()}` : p;
-}
+function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
 
 function generateTeams(){
   let players=buildFinalPlayerPool();
   const selectedGoalies=getSelectedGoalies();
   const teamSize=parseInt(document.getElementById("teamSize").value,10);
+  if(!teamSize||teamSize<1){alert("Enter valid team size.");return;}
 
-  if(!teamSize || teamSize<1){ alert("Enter valid team size."); return; }
-
-  if(selectedGoalies.length){
-    const goalieSet=new Set(selectedGoalies.map(g=>g.toLowerCase()));
-    players = players.filter(p => !goalieSet.has(p.toLowerCase()));
-  }
+  if(selectedGoalies.length){ const gSet=new Set(selectedGoalies.map(g=>g.toLowerCase())); players=players.filter(p=>!gSet.has(p.toLowerCase())); }
 
   shuffle(players);
+  const numTeams=2;
+  const teams=Array.from({length:numTeams},()=>[]);
+  const subsPerTeam=Array.from({length:numTeams},()=>[]);
 
-  const teams=[[],[]];
-  const subs=[[],[]];
+  for(let i=0;i<numTeams;i++){ if(selectedGoalies.length){ teams[i].push(selectedGoalies[i%selectedGoalies.length]+" (G)"); } }
 
-  selectedGoalies.forEach((g,i)=>teams[i].push(g+" (G)"));
-
-  let current=0;
-  for(const p of players){
-    const skaters=teams[current].filter(x=>!x.includes("(G)")).length;
-    if(skaters < teamSize){
-      teams[current].push(p);
-    } else {
-      subs[current].push(p);
-    }
-    current=(current+1)%2;
+  let currentTeam=0;
+  for(const player of players){
+    const skaters=teams[currentTeam].filter(p=>!p.includes("(G)")).length;
+    if(skaters<teamSize){ teams[currentTeam].push(player); } else { subsPerTeam[currentTeam].push(player); }
+    currentTeam=(currentTeam+1)%numTeams;
   }
+  renderTeams(teams,teamSize,subsPerTeam);
 
-  renderTeams(teams,teamSize,subs);
+  toolbar.style.display=document.getElementById("output").innerText.trim()?"flex":"none";
+  if(!navigator.share) document.getElementById("shareTeamsBtn").style.display="none";
 }
 
-function renderTeams(teams, teamSize, subs){
+function renderTeams(teams, teamSize, subsPerTeam){
+  const teamNames=["The Five-Hole Fiddlers","Goal Diggers","Ball Blazers","Stick Flickers","The Mighty Dangles","Deez Sticks","Floor Fury","The Dirty Dekes","Stickflix and Chill","The Deflectors","Ballz Deep","Just the Tip-Ins","The Slap and Tickles"];
+  shuffle(teamNames);
   const out=document.getElementById("output");
   out.innerHTML="";
 
   teams.forEach((team,i)=>{
+    const displayName=teamNames[i%teamNames.length];
     let goalie=null;
-    let players = [...team];
-    if(players[0] && players[0].includes("(G)")){
-      goalie=players[0];
-      players=players.slice(1);
-    }
+    let playersOnly=team.slice();
+    if(playersOnly[0] && playersOnly[0].includes("(G)")){ goalie=playersOnly[0]; playersOnly=playersOnly.slice(1); }
+    const substitutes=subsPerTeam[i]||[];
+    const goalieTop=i%2===0;
+    let topSlot, midLeft, midRight, bottomSlot;
+    if(goalieTop){ topSlot=goalie; midLeft=playersOnly[0]||""; midRight=playersOnly[1]||""; bottomSlot=playersOnly[2]||""; }
+    else { topSlot=playersOnly[0]||""; midLeft=playersOnly[1]||""; midRight=playersOnly[2]||""; bottomSlot=goalie; }
 
-    const html = `
-    <div class="team">
-      <div class="team-title">Team ${i+1}</div>
+    const cardHtml=`<div class="team">
+      <div class="team-title">${displayName}</div>
       <div class="formation-container">
         <div class="formation-layout">
-          ${centeredRow(goalie)}
-          ${twoAcrossRow(players[0]||"", players[1]||"")}
-          ${centeredRow(players[2]||"")}
+          ${centeredRow(topSlot)}
+          ${twoAcrossRow(midLeft,midRight)}
+          ${centeredRow(bottomSlot)}
         </div>
         <div class="subs-section">
           <div style="font-weight:bold;text-align:center;margin-bottom:8px;">Subs</div>
-          ${subs[i].length?subs[i].map(s=>`<div class="sub-card">${formatPlayer(s)}</div>`).join(""):`<div style="text-align:center;">None</div>`}
+          ${substitutes.length===0?`<div style="text-align:center;">None</div>`:substitutes.map(s=>`<div class="sub-card">${formatPlayer(s)}</div>`).join("")}
         </div>
       </div>
     </div>`;
-    out.insertAdjacentHTML("beforeend", html);
+    out.insertAdjacentHTML('beforeend',cardHtml);
   });
+}
+
+function centeredRow(player){ return player?`<div class="row-center"><div class="player-icon"></div><div class="player-name">${formatPlayer(player)}</div></div>`:`<div class="row-center"><div style="height:46px"></div></div>`; }
+function twoAcrossRow(left,right){ return `<div class="row-two"><div class="player-block"><div class="player-icon"></div><div class="player-name">${formatPlayer(left)}</div></div><div class="player-block"><div class="player-icon"></div><div class="player-name">${formatPlayer(right)}</div></div></div>`; }
+function formatPlayer(p){ if(!p)return""; return p.includes("(G)")?`🧤 ${p.replace("(G)","").trim()}`:p; }
+
+const toolbar=document.getElementById("exportToolbar");
+function saveTeamsAsImage(){
+  const output=document.getElementById("output");
+  if(!output.innerText.trim()){alert("No teams to save yet!"); return;}
+  html2canvas(output,{backgroundColor:'#f9f9f9',scale:2}).then(canvas=>{ const link=document.createElement("a"); link.download="floorball_teams.png"; link.href=canvas.toDataURL("image/png"); link.click(); });
+}
+function shareTeams(){
+  const output=document.getElementById("output").innerText.trim();
+  if(!output){alert("No teams to share yet!");return;}
+  if(navigator.share){ navigator.share({title:"Floorball Teams",text:output}).catch(err=>console.log("Share cancelled:",err)); }
+  else { alert("Sharing not supported on this device/browser. Try saving instead."); }
 }
 
 window.addEventListener("DOMContentLoaded",()=>{
   createPlayerChips();
   createGoalieChips();
   updateClearButtonVisibility();
+  document.getElementById("names").addEventListener("input", updateClearButtonVisibility);
 });
 </script>
 </body>
