--- a/index.html
+++ b/index.html
@@ -75,7 +75,24 @@
     .row-center { display:flex; flex-direction:column; align-items:center; }
     .row-two { width:100%; display:flex; justify-content:space-between; }
     .player-block { display:flex; flex-direction:column; align-items:center; }
-    .player-icon { width:60px; height:60px; background:#3a52a3; border-radius:50%; }
+
+    /* ✅ REPLACED BLUE CIRCLE WITH PERSON ICON */
+    .player-icon {
+      width:60px;
+      height:60px;
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%233a52a3"><path d="M12 2a5 5 0 100 10 5 5 0 000-10zm0 12c-4.42 0-8 2.69-8 6v2h16v-2c0-3.31-3.58-6-8-6z"/></svg>');
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      border-radius: 0;
+      background-color: transparent;
+    }
+
+    /* ✅ GOALIE ICON */
+    .player-icon.goalie {
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23ff9800"><path d="M12 2a5 5 0 100 10 5 5 0 000-10zm7 14c0-1.1-.9-2-2-2h-3v-2H10v2H7c-1.1 0-2 .9-2 2v2h14v-2z"/></svg>');
+    }
+
     .player-name { margin-top:6px; font-weight:600; }
 
     @media (max-width:640px) {
@@ -140,7 +157,6 @@ function createChips(list, containerId, handler){
   });
 }
 
-// ✅ Updated togglePlayer to remove unselected player from list
 function togglePlayer(name, chip){
   const textarea=document.getElementById("names");
   let names=textarea.value.split(",").map(n=>n.trim()).filter(Boolean);
@@ -252,8 +268,27 @@ function renderTeams(teams, teamSize, subsPerTeam){
   });
 }
 
-function centeredRow(player){ return player?`<div class="row-center"><div class="player-icon"></div><div class="player-name">${formatPlayer(player)}</div></div>`:`<div class="row-center"><div style="height:46px"></div></div>`; }
-function twoAcrossRow(left,right){ return `<div class="row-two"><div class="player-block"><div class="player-icon"></div><div class="player-name">${formatPlayer(left)}</div></div><div class="player-block"><div class="player-icon"></div><div class="player-name">${formatPlayer(right)}</div></div></div>`; }
+/* ✅ Inject goalie or normal icon dynamically — minimal change */
+function centeredRow(player){ 
+  return player
+    ? `<div class="row-center"><div class="player-icon${player.includes('(G)')?' goalie':''}"></div><div class="player-name">${formatPlayer(player)}</div></div>`
+    : `<div class="row-center"><div style="height:46px"></div></div>`;
+}
+
+function twoAcrossRow(left,right){
+  return `
+    <div class="row-two">
+      <div class="player-block">
+        <div class="player-icon${left && left.includes('(G)')?' goalie':''}"></div>
+        <div class="player-name">${formatPlayer(left)}</div>
+      </div>
+      <div class="player-block">
+        <div class="player-icon${right && right.includes('(G)')?' goalie':''}"></div>
+        <div class="player-name">${formatPlayer(right)}</div>
+      </div>
+    </div>`;
+}
+
 function formatPlayer(p){ if(!p)return""; return p.includes("(G)")?`🧤 ${p.replace("(G)","").trim()}`:p; }
 
 const toolbar=document.getElementById("exportToolbar");
