--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ function twoAcrossRow(left,right){
     </div>`;
 }
 
-function formatPlayer(p){ if(!p)return""; return p.includes("(G)")?`🧤 ${p.replace("(G)","").trim()}`:p; }
+function formatPlayer(p){ if(!p)return""; return p.includes("(G)")?`🥅 ${p.replace("(G)","").trim()}`:p; }
 
 const toolbar=document.getElementById("exportToolbar");
 function saveTeamsAsImage(){
